# NCursed-Editor

./: Buffer.cpp  CMakeLists.txt  Editor.cpp  Editor.h  README.md  main.cpp
Buffer/: Buffer.cpp  Buffer.h
Editor/: Cursor.h  Editor.cpp  Editor.h
